# StanBKT

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  demonstration.ipynb  pyproject.toml  scratch.ipynb  scratch.py  test.ipynb
docs/: Makefile
docs/source/: .gitignore  conf.py  example_root.rst  index.rst  installation.rst  internal_api.rst  public_api.rst  quickstart.rst
docs/source/_templates/: maple-lab.html
docs/source/_templates/autosummary/: class.rst  module.rst  package.rst
docs/source/examples/: 01_setup.ipynb  02_simple_example.ipynb  03_multi_BKT_example.ipynb
src/stanbkt/: __init__.py
src/stanbkt/fits/: __init__.py  base.py  base_fit.py  fit_factory.py  fit_options.py  fit_types.py  mcmc.py
src/stanbkt/fits/core/: __init__.py  base.py  mcmc.py  mle.py  pf.py  vb.py
src/stanbkt/fits/persistence/: __init__.py  fit_io.py  metadata.py
src/stanbkt/models/: BKT.py  __init__.py  base.py  error.py  model_types.py  predictions.py  priors.py  standard.py
src/stanbkt/models/core/: __init__.py  base.py  multi.py  standard.py
src/stanbkt/plot/: __init__.py  parameter_plots.py  posterior_plots.py
src/stanbkt/stan_code/BKT/: BKT_model  BKT_model.stan  hidden_states  hidden_states.stan  smoothed_hidden_states  smoothed_hidden_states.stan
src/stanbkt/stan_code/base/: grouped_hmm.stan  grouped_hmm_nested.stan
src/stanbkt/stan_code/base_models/: BKT  BKT.stan  grouped_BKT  grouped_BKT_gq  grouped_BKT_gq.stan  grouped_hmm.stan  hmm.stan
src/stanbkt/stan_code/generated_quantities/bkt/: hidden_state_smoothed  hidden_state_smoothed.stan
src/stanbkt/stan_code/generated_quantities/common/: data_block.stan
src/stanbkt/utils/: __init__.py  compilation.py  data_utils.py  fit_options.py  metrics.py  model_archive.py  model_io.py  posterior_utils.py  sim.py  summary_utils.py  verbose.py
tests/: test_base_fit.py  test_compilation.py  test_data_utils.py  test_fit_core.py  test_fit_factory.py  test_fit_io.py  test_fit_types.py  test_metrics.py  test_model_io.py  test_models_base.py  test_multi_bkt.py  test_parameter_plots.py  test_posterior_plots.py  test_priors.py  test_sim.py  test_standard_bkt.py  test_verbose.py
