[project]
name = "stanbkt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Siddhartha Pradhan", email = "64797131+SiddharthaPradhan@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "cmdstanpy>=1.3.0",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "ipywidgets>=8.1.8",
    "numba>=0.64.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "platformdirs>=4.4.0",
    "pydata-sphinx-theme>=0.16.1",
    "roman-numerals==4.0.0",
    "scikit-learn>=1.8.0",
    "xarray>=2025.10.1",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.8.0",
    "sphinx-new-tab-link>=0.8.1",
    "sphinxcontrib-napoleon>=0.7",
]

# Type (ty) checker config
[tool.ty.environment]
root = ["./src"]
python = "./.venv"

# pytest config
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow and not run by default.",
]
addopts = [
    "-m not slow", # exclude slow tests by default
]
