[project]
name = "stanbkt"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Siddhartha Pradhan", email = "64797131+SiddharthaPradhan@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "arviz>=1.0.0",
    "cmdstanpy>=1.3.0",
    "matplotlib>=3.9.4",
    "natsort>=8.4.0",
    "numba>=0.60.0",
    "pandas>=2.3.3",
    "platformdirs>=4.4.0",
    "scikit-learn>=1.6.1",
    "tbb>=2022.3.1",
    "xarray>=2024.7.0",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "ipython>=8.18.1",
    "ipywidgets>=8.1.8",
    "nbsphinx>=0.9.8",
    "pydata-sphinx-theme>=0.16.1",
    "pympler>=1.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "roman-numerals>=3.1.0",
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
    "sphinx-new-tab-link>=0.8.0",
    "sphinxcontrib-napoleon>=0.7",
]


# Type (ty) checker config
[tool.ty.environment]
root = ["./src"]
python = "./.venv"

# pytest config
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow and not run by default.",
]
addopts = [
    "-m not slow", # exclude slow tests by default
]
